order-store-fe-config/app/kustomize/base/store-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-store-fe
  labels:
    app.openshift.io/runtime: quarkus
    app: order-store-fe
    app-with-metrics: order-store-fe

spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-store-fe
  template:
    metadata:
      labels:
        app: order-store-fe
        version: v1
    spec:
      containers:
        - name: order-store-fe
          image: quay.io/mcombi/order-store-fe:1.3
          ports:
            - containerPort: 8080
              protocol: TCP
              name: tpc-port
